# snake-clone

./: .gitignore  Doxyfile  LICENSE  Makefile  README.md  config.h.in  meson.build  stage-1.map  stage-2.map  stage-3.map  stage-4.map  stage-5.map
debian/: changelog  control  copyright  rules
report/step-1&2/: 설계.md
src/: Direct.h  Point.h  board.cpp  board.h  border.cpp  cursor.h  direct.h  main.cpp  mission.h  point.h  snake.cpp  snake.h
